--- a/src/app/tasks-list/tasks-list.component.html
+++ b/src/app/tasks-list/tasks-list.component.html
@@ -1,7 +1,7 @@
 <div class="main-box">
-    <h2 class="heading">... you will do X tasks</h2>
+    <h2 class="heading">{{ getDay(day) }} you will do {{ maxTasks }} tasks</h2>
     <label for="max-tasks">Max tasks today: </label>
-    <input type="number" id="max-tasks">
+    <input [(ngModel)]="maxTasks" type="number" id="max-tasks">
     <div>
         Tasks list:
         <ul class="list">
@@ -10,8 +10,8 @@
         </ul>
     </div>
     <div>
-        <input type="text" placeholder="New Task">
-        <button class="btn">Add task</button>
+        <input #newTaskInput (keyup)="checkInput($event)" type="text" placeholder="New Task">
+        <button [disabled]="!canAddTask" class="btn" (click)="addTask(newTaskInput)">Add task</button>
     </div>
     <p>You've reached task limit!</p>
     <p>Selected task</p>
