--- a/src/app/tasks-manage/task-view/task-view.component.html
+++ b/src/app/tasks-manage/task-view/task-view.component.html
@@ -1,3 +1,5 @@
-<p>
-  task-view works!
-</p>
+<h2>Task info:</h2>
+<p>Name: {{ task.name }}</p>
+<p *ngIf="task.deadline">Deadline: {{ task.deadline }}</p>
+<p *ngIf="task.priority">Priority: {{ task.priority }}</p>
+<p *ngIf="task.details">Details: {{ task.details }}</p>
