--- a/src/app/tasks-manage/tasks-manage.component.html
+++ b/src/app/tasks-manage/tasks-manage.component.html
@@ -4,16 +4,16 @@
             <li 
                 appHighlight 
                 highlightColor="lightblue" 
-                (click)="onTaskSelect()"
                 *ngFor="let task of tasks" 
+                (click)="onTaskSelect(task)"
                 class="list-box-list-item">
-                {{ task }}
+                {{ task.name }}
             </li>
         </ul>
     </div>
     <div *ngIf="taskSelected" class="navbar">
-        <a class="navbar-link" routerLinkActive="navbar-link-active" [routerLink]="['1', 'view']">View</a>
-        <a class="navbar-link" routerLinkActive="navbar-link-active" [routerLink]="['/tasks-manage', '4', 'edit']">Edit</a>
+        <a class="navbar-link" routerLinkActive="navbar-link-active" [routerLink]="[selectedTask.id, 'view']">View</a>
+        <a class="navbar-link" routerLinkActive="navbar-link-active" [routerLink]="['/tasks-manage', selectedTask.id, 'edit']">Edit</a>
     </div>
     <router-outlet></router-outlet>
 </div>
