--- a/src/app/tasks-list/task-item/task-item.component.html
+++ b/src/app/tasks-list/task-item/task-item.component.html
@@ -1,3 +1,3 @@
-<span (click)="onTaskTextClick()">{{ task }}</span>
+<span (click)="onTaskTextClick()">{{ task.name }}</span>
 <div>is your task!</div>
 <ng-content></ng-content>
